hphp/test/zend/good/Zend/tests/bug43344_11.php.expectf

Fatal error: Undefined constant 'bar' in %s/bug43344_11.php on line 2
